--- a/style.css
+++ b/style.css
@@ -1,35 +1,33 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing:inherit;
+  box-sizing: inherit;
 }
 
-html{
+html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Poppins",sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 300;
   color: rgb(242, 162, 162);
   line-height: 1.9;
   background-color: rgb(86, 21, 98);
-  
 }
 
 /* Header */
 
-.header{
+.header {
   padding: 0 3rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
-.header-title{
+.header-title {
   flex: 1;
   max-width: 115rem;
   display: grid;
@@ -43,9 +41,9 @@ body {
 
 .highlight {
   position: relative;
-  color:rgba(43, 22, 124, 0.885)
+  color: rgba(43, 22, 124, 0.885);
 }
-.highlight::after{
+.highlight::after {
   display: block;
   content: "";
   position: absolute;
@@ -56,28 +54,26 @@ body {
   z-index: -1;
   opacity: 0.7;
   transform: scale(1.07, 1.05) skewX(-15deg);
-  background-color:rgb(242, 162, 162);
+  background-color: rgb(242, 162, 162);
 }
 
 .header-text {
   font-size: 5.5rem;
   line-height: 1.35;
-  color:rgb(242, 162, 162);
-  
+  color: rgb(242, 162, 162);
 }
 h4 {
   font-size: 2rem;
   font-weight: 500;
-  color:rgb(242, 162, 162);
+  color: rgb(242, 162, 162);
   margin-left: 4rem;
-  
 }
 
 /* Navigation */
 
-.nav-logo{
- height: 20rem;
- margin-top: 18rem;
+.nav-logo {
+  height: 20rem;
+  margin-top: 18rem;
 }
 
 .nav {
@@ -90,10 +86,10 @@ h4 {
   z-index: 100;
 }
 
-.nav-links{
+.nav-links {
   display: flex;
   align-items: center;
-  list-style:none;
+  list-style: none;
 }
 
 .nav-item {
@@ -102,10 +98,9 @@ h4 {
 
 .nav-link:link,
 .nav-link:visited {
-  
   font-size: 1.7rem;
   font-weight: 400;
-  color:rgb(242, 162, 162);
+  color: rgb(242, 162, 162);
   text-decoration: none;
   display: block;
   transition: all 0.3s;
@@ -113,39 +108,39 @@ h4 {
 
 .nav-link--btn:link,
 .nav-link--btn:visited {
-padding: 0.8rem 2.5 rem;
-border-radius: 3rem;
-background-color:rgba(43, 22, 124, 0.885);
-color:rgb(242, 162, 162);
-font-size: 1.7rem;
-font-weight: 400;
-} 
+  padding: 0.8rem 2.5 rem;
+  border-radius: 3rem;
+  background-color: rgba(43, 22, 124, 0.885);
+  color: rgb(242, 162, 162);
+  font-size: 1.7rem;
+  font-weight: 400;
+}
 
 .nav-link--btn:hover,
 .nav-link--btn:active {
-  background-color:rgba(43, 22, 124, 0.885);
-  color:rgb(242, 162, 162);
+  background-color: rgba(43, 22, 124, 0.885);
+  color: rgb(242, 162, 162);
 }
 
 .btn {
   font-size: 2rem;
   font-weight: 400;
-  color:rgb(242, 162, 162);
-  background-color:rgba(43, 22, 124, 0.885);
+  color: rgb(242, 162, 162);
+  background-color: rgba(43, 22, 124, 0.885);
   border-radius: 3rem;
-  border-color:rgba(43, 22, 124, 0.885);
+  border-color: rgba(43, 22, 124, 0.885);
   margin-left: -40rem;
   padding: 1rem 3rem;
 }
 
-.btn-text{
+.btn-text {
   font-size: 2rem;
   margin-left: 2rem;
-  color:rgba(43, 22, 124, 0.885); 
- cursor: pointer;
- padding: 1rem 4rem;
- /* color: (#081b29,#0ef,#081b29,#0ef); */
- }
+  color: rgba(43, 22, 124, 0.885);
+  cursor: pointer;
+  padding: 1rem 4rem;
+  /* color: (#081b29,#0ef,#081b29,#0ef); */
+}
 
 .numOfLetters {
   display: grid;
@@ -154,26 +149,26 @@ font-weight: 400;
   margin: 0 20rem;
   margin-top: 2rem;
 }
-.numOfLettersLabel{
+.numOfLettersLabel {
   font-size: 2rem;
   margin-left: 2rem;
 }
 
-.numOfLettersInput{
+.numOfLettersInput {
   font-size: 2rem;
   margin-left: 2rem;
-  color:rgba(43, 22, 124, 0.885);
+  color: rgba(43, 22, 124, 0.885);
   cursor: pointer;
-  padding : 1rem 3rem;
+  padding: 1rem 3rem;
 }
 
-.numOfLetters-img{
+.numOfLetters-img {
   width: 50%;
 }
 
 .numOfLetters-letters {
-  align-self:center;
-  justify-self:center;
+  align-self: center;
+  justify-self: center;
   width: 50%;
   font-size: 1.5rem;
   margin-left: 2rem;
@@ -182,14 +177,14 @@ font-weight: 400;
 .numOfLetters-icon {
   display: flex;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
   height: 5.5rem;
   width: 5.5rem;
   border-radius: 50%;
   margin-bottom: 2rem;
 }
 
-.numOfletters-header{
+.numOfletters-header {
   font-size: 2rem;
   margin-bottom: 1rem;
 }
@@ -210,41 +205,41 @@ font-weight: 400;
   margin: 0 auto 8rem auto;
 }
 
-.section-description{
+.section-description {
   font-size: 2rem;
   margin-left: 2rem;
-  color:rgba(21, 192, 239, 0.885);
+  color: rgba(21, 192, 239, 0.885);
 }
 
-.section-header{
+.section-header {
   margin-left: 2rem;
   font-size: 4rem;
 }
 
-.bx bx-calculator{
+.bx bx-calculator {
   height: 2.5rem;
   width: 2.5rem;
-  fill:rgb(242, 162, 162);
+  fill: rgb(242, 162, 162);
 }
 
-.bx bx-check-shield{
+.bx bx-check-shield {
   height: 2.5rem;
   width: 2.5rem;
-  fill:rgb(242, 162, 162);
+  fill: rgb(242, 162, 162);
 }
 
-.numOfLetters-letters{
+.numOfLetters-letters {
   align-self: center;
   justify-self: center;
   width: 70%;
   font-size: 1.5rem;
 }
 
-.numOfletters-icon{
+.numOfletters-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color:rgba(21, 192, 239, 0.885) ;
+  background-color: rgba(21, 192, 239, 0.885);
   height: 5.5rem;
   width: 5.5rem;
   border-radius: 50%;
@@ -252,164 +247,162 @@ font-weight: 400;
 }
 
 .form {
-/* position: relative; */
-width: 750px;
-height: 410px;
-background: transparent;
-border: 2px solid rgba(43, 22, 124, 0.885) ;
+  /* position: relative; */
+  width: 750px;
+  height: 410px;
+  background: transparent;
+  border: 2px solid rgba(43, 22, 124, 0.885);
 }
 
-.form .form-box{
-/* position: absolute; */
-top: 0;
-width: 100%;
-height: 100%;
-background:rgba(43, 22, 124, 0.885);
-
+.form .form-box {
+  /* position: absolute; */
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(43, 22, 124, 0.885);
 }
 
 /* section 2 */
 
-.form-box2{
+.form-box2 {
   /* background:rgb(6, 49, 89); */
-  background:rgba(43, 22, 124, 0.885);
+  background: rgba(43, 22, 124, 0.885);
   width: 750px;
   height: 450px;
   padding: 80px 30px;
   margin-left: 380px;
-  margin-top:250px;
+  margin-top: 250px;
   /* position: absolute; */
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   top: 250%;
   left: 75%;
   border-radius: 8px;
-  box-shadow: 0 20px 25px rgba(0,0,0,0.25)
+  box-shadow: 0 20px 25px rgba(0, 0, 0, 0.25);
 }
 
 .form-box2 * {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
-  }
+}
 
- .form-box2 .textarea{
+.form-box2 .textarea {
   display: block;
   width: 100%;
   height: 60%;
   resize: none;
-  padding: 20px ;
-  color:rgba(43, 22, 124, 0.885);
+  padding: 20px;
+  color: rgba(43, 22, 124, 0.885);
   border: 1.5px solid rgba(43, 22, 124, 0.885);
-  border-radius:5px;
+  border-radius: 5px;
   outline: none;
 }
 
 .btnSection2 {
-font-size: 2rem;
-margin-top: 2rem;
-color:rgba(43, 22, 124, 0.885); 
-cursor: pointer;
+  font-size: 2rem;
+  margin-top: 2rem;
+  color: rgba(43, 22, 124, 0.885);
+  cursor: pointer;
 }
-.section-title .section-header{
-margin-bottom: 2rem;
+.section-title .section-header {
+  margin-bottom: 2rem;
 }
 /* Section3 */
 
-.result1{
-margin-top: 2rem;
+.result1 {
+  margin-top: 2rem;
 }
 
-.countResult{
+.countResult {
   margin-left: 2rem;
   font-size: 2rem;
 }
 
-.countNumber{
-font-size: 2rem;
+.countNumber {
+  font-size: 2rem;
 }
 
-.form-box2 .numOfLettersInput{
-color:rgba(43, 22, 124, 0.885); 
-margin-top: 2rem;
- font-size: 2rem;
+.form-box2 .numOfLettersInput {
+  color: rgba(43, 22, 124, 0.885);
+  margin-top: 2rem;
+  font-size: 2rem;
 }
 
-.form-box2 .btnSection3{
-font-size: 2rem;
-font-weight: 400;
-margin-top: 2rem;
-color:rgba(43, 22, 124, 0.885);
+.form-box2 .btnSection3 {
+  font-size: 2rem;
+  font-weight: 400;
+  margin-top: 2rem;
+  color: rgba(43, 22, 124, 0.885);
 }
 
 /* Section 4 */
-.form-box3{
+.form-box3 {
   /* background:rgb(6, 49, 89); */
-  background:rgba(43, 22, 124, 0.885);
+  background: rgba(43, 22, 124, 0.885);
   width: 750px;
   height: 450px;
   padding: 80px 30px;
   margin-left: 380px;
-  margin-top:250px;
+  margin-top: 250px;
   /* position: absolute; */
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   top: 250%;
   left: 75%;
   border-radius: 8px;
-  box-shadow: 0 20px 25px rgba(0,0,0,0.25)
+  box-shadow: 0 20px 25px rgba(0, 0, 0, 0.25);
 }
 
 .form-box3 * {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
-  }
-  .form-box3 .textArea{
-    display: block;
-    width: 100%;
-    height: 60%;
-    resize: none;
-    padding: 20px;
-    color:rgba(43, 22, 124, 0.885);
-    border: 1.5px solid rgba(43, 22, 124, 0.885);
-    border-radius: 5px;
-    outline: none; 
-  }
-
-
-.btnSection3 {
-font-size: 2rem;
-margin-top: 2rem;
-color:rgba(43, 22, 124, 0.885); 
-cursor: pointer;
+}
+.form-box3 .textArea {
+  display: block;
+  width: 100%;
+  height: 60%;
+  resize: none;
+  padding: 20px;
+  color: rgba(43, 22, 124, 0.885);
+  border: 1.5px solid rgba(43, 22, 124, 0.885);
+  border-radius: 5px;
+  outline: none;
 }
 
-.result3{
-  margin-top: 2rem;
-  }
-  
-  .countOfResult{
-    margin-left: 2rem;
-    font-size: 2rem;
-  }
-  
-  .countOfNumber{
+.btnSection3 {
   font-size: 2rem;
-  }
-  
-  .form-box3 .limitOfLetters{
-  color:rgba(43, 22, 124, 0.885); 
   margin-top: 2rem;
-   font-size: 2rem;
-  }
-  
-  .form-box3 .btnSection4{
+  color: rgba(43, 22, 124, 0.885);
+  cursor: pointer;
+}
+
+.result3 {
+  margin-top: 2rem;
+}
+
+.countOfResult {
+  margin-left: 2rem;
+  font-size: 2rem;
+}
+
+.countOfNumber {
+  font-size: 2rem;
+}
+
+.form-box3 .limitOfLetters {
+  color: rgba(43, 22, 124, 0.885);
+  margin-top: 2rem;
+  font-size: 2rem;
+}
+
+.form-box3 .btnSection4 {
   font-size: 2rem;
   font-weight: 400;
   margin-top: 2rem;
-  color:rgba(43, 22, 124, 0.885);
-  }
-  
+  color: rgba(43, 22, 124, 0.885);
+}
+
 /* SIGNUP */
 .section--sign-up {
-  background-color: rgba(43, 22, 124, 0.885);;
+  background-color: rgba(43, 22, 124, 0.885);
   border-top: none;
   border-bottom: 1px solid #fff;
   text-align: center;
@@ -430,15 +423,15 @@ cursor: pointer;
   font-size: 1.9rem;
   padding: 2rem 5rem;
   margin-left: 2rem;
-  background-color:rgb(86, 21, 98);
-  color:#fff;
+  background-color: rgb(86, 21, 98);
+  color: #fff;
   border-radius: 3rem 3rem;
 }
 
 /* FOOTER */
 .footer {
   padding: 10rem 3rem;
-  background-color:rgb(86, 21, 98);
+  background-color: rgb(86, 21, 98);
 }
 
 .footer__nav {
@@ -534,7 +527,6 @@ cursor: pointer;
   margin-left: 1rem;
   padding: 1rem 3rem;
   border-radius: 2.5rem;
-  
 }
 
 .btn--close-modal {
@@ -566,25 +558,24 @@ cursor: pointer;
   font-weight: 400;
 }
 
-h1, h2 ,p {
+h1,
+h2,
+p {
   font-family: sans-serif;
 }
 
-h1{
+h1 {
   color: purple;
   font-weight: bold;
-  font-style:italic;
+  font-style: italic;
   text-transform: uppercase;
 }
 
-h2{
-color: purple;
-font-style:italic;
-
+h2 {
+  color: purple;
+  font-style: italic;
 }
 /* .author
 {
   color:purple;
   } */
-
-
