--- a/style.css
+++ b/style.css
@@ -184,13 +184,13 @@ h4 {
   margin-bottom: 2rem;
 }
 
-.numOfletters-header {
+.numOfLetters-header {
   font-size: 2rem;
   margin-bottom: 1rem;
 }
 /* General elements */
 .section {
-  padding: 15rem 3rem;
+  padding: 8rem 3rem;
   border-top: 1px solid #ddd;
   transition: transform 1s, opacity 1s;
 }
@@ -235,7 +235,7 @@ h4 {
   font-size: 1.5rem;
 }
 
-.numOfletters-icon {
+.numOfLetters-icon {
   display: flex;
   align-items: center;
   justify-content: center;
