--- a/style.css
+++ b/style.css
@@ -190,9 +190,10 @@ h4 {
 }
 /* General elements */
 .section {
-  padding: 8rem 3rem;
+  padding: 5rem 3rem;
   border-top: 1px solid #ddd;
   transition: transform 1s, opacity 1s;
+  margin-bottom: 14rem;
 }
 
 .section--hidden {
@@ -245,11 +246,15 @@ h4 {
   border-radius: 50%;
   margin-bottom: 2rem;
 }
-
+.inputButtons {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 1rem;
+}
 .form {
   /* position: relative; */
   width: 750px;
-  height: 410px;
+  height: 60px;
   background: transparent;
   border: 2px solid rgba(43, 22, 124, 0.885);
 }
@@ -260,6 +265,7 @@ h4 {
   width: 100%;
   height: 100%;
   background: rgba(43, 22, 124, 0.885);
+  margin-bottom: 2rem;
 }
 
 /* section 2 */
@@ -306,6 +312,7 @@ h4 {
 .section-title .section-header {
   margin-bottom: 2rem;
 }
+
 /* Section3 */
 
 .result1 {
