--- a/style.css
+++ b/style.css
@@ -12,577 +12,170 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
-  color: rgb(242, 162, 162);
   line-height: 1.9;
+  color: #fff;
   background-color: rgb(86, 21, 98);
 }
 
-/* Header */
-
-.header {
-  padding: 0 3rem;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.header-title {
-  flex: 1;
-  max-width: 115rem;
-  display: grid;
-  grid-template-columns: 3fr 2fr;
-  row-gap: 3rem;
-  align-content: center;
-  justify-content: center;
-  align-items: start;
-  justify-items: start;
-}
-
-.highlight {
-  position: relative;
-  color: rgba(43, 22, 124, 0.885);
-}
-.highlight::after {
-  display: block;
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-  opacity: 0.7;
-  transform: scale(1.07, 1.05) skewX(-15deg);
-  background-color: rgb(242, 162, 162);
-}
-
-.header-text {
-  font-size: 5.5rem;
-  line-height: 1.35;
-  color: rgb(242, 162, 162);
-}
-h4 {
-  font-size: 2rem;
-  font-weight: 500;
-  color: rgb(242, 162, 162);
-  margin-left: 4rem;
-}
-
-/* Navigation */
-
-.nav-logo {
-  height: 20rem;
-  margin-top: 18rem;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 9rem;
-  width: 100%;
-  padding: 0 6rem;
-  z-index: 100;
-}
-
-.nav-links {
-  display: flex;
-  align-items: center;
-  list-style: none;
-}
-
-.nav-item {
-  margin-left: 6rem;
-}
-
-.nav-link:link,
-.nav-link:visited {
-  font-size: 1.7rem;
-  font-weight: 400;
-  color: rgb(242, 162, 162);
-  text-decoration: none;
-  display: block;
-  transition: all 0.3s;
-}
-
-.nav-link--btn:link,
-.nav-link--btn:visited {
-  padding: 0.8rem 2.5 rem;
-  border-radius: 3rem;
-  background-color: rgba(43, 22, 124, 0.885);
-  color: rgb(242, 162, 162);
-  font-size: 1.7rem;
-  font-weight: 400;
-}
-
-.nav-link--btn:hover,
-.nav-link--btn:active {
-  background-color: rgba(43, 22, 124, 0.885);
-  color: rgb(242, 162, 162);
+.logo {
+  height: 16rem;
+  margin: 2rem;
 }
 
 .btn {
   font-size: 2rem;
-  font-weight: 400;
-  color: rgb(242, 162, 162);
-  background-color: rgba(43, 22, 124, 0.885);
+  font-weight: 600;
+  color: rgba(43, 22, 124, 0.885);
+  background-color: #fff;
   border-radius: 3rem;
-  border-color: rgba(43, 22, 124, 0.885);
-  margin-left: -40rem;
   padding: 1rem 3rem;
-}
-
-.btn-text {
-  font-size: 2rem;
-  margin-left: 2rem;
-  color: rgba(43, 22, 124, 0.885);
-  cursor: pointer;
-  padding: 1rem 4rem;
-  /* color: (#081b29,#0ef,#081b29,#0ef); */
-}
-
-.numOfLetters {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 4rem;
-  margin: 0 20rem;
-  margin-top: 2rem;
-}
-.numOfLettersLabel {
-  font-size: 2rem;
-  margin-left: 2rem;
-}
-
-.numOfLettersInput {
-  font-size: 2rem;
-  margin-left: 2rem;
-  color: rgba(43, 22, 124, 0.885);
-  cursor: pointer;
-  padding: 1rem 3rem;
-}
-
-.numOfLetters-img {
-  width: 50%;
-}
-
-.numOfLetters-letters {
-  align-self: center;
-  justify-self: center;
-  width: 50%;
-  font-size: 1.5rem;
-  margin-left: 2rem;
-}
-
-.numOfLetters-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 5.5rem;
-  width: 5.5rem;
-  border-radius: 50%;
-  margin-bottom: 2rem;
-}
-
-.numOfLetters-header {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-}
-/* General elements */
-.section {
-  padding: 5rem 3rem;
-  border-top: 1px solid #ddd;
-  transition: transform 1s, opacity 1s;
-  margin-bottom: 14rem;
-}
-
-.section--hidden {
-  opacity: 0;
-  transform: translateY(8rem);
-}
-
-.section__title {
-  max-width: 80rem;
-  margin: 0 auto 8rem auto;
-}
-
-.section-description {
-  font-size: 2rem;
-  margin-left: 2rem;
-  color: rgba(21, 192, 239, 0.885);
-}
-
-.section-header {
-  margin-left: 2rem;
-  font-size: 4rem;
-}
-
-.bx bx-calculator {
-  height: 2.5rem;
-  width: 2.5rem;
-  fill: rgb(242, 162, 162);
-}
-
-.bx bx-check-shield {
-  height: 2.5rem;
-  width: 2.5rem;
-  fill: rgb(242, 162, 162);
-}
-
-.numOfLetters-letters {
-  align-self: center;
-  justify-self: center;
-  width: 70%;
-  font-size: 1.5rem;
-}
-
-.numOfLetters-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(21, 192, 239, 0.885);
-  height: 5.5rem;
-  width: 5.5rem;
-  border-radius: 50%;
-  margin-bottom: 2rem;
-}
-.inputButtons {
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 1rem;
-}
-.form {
-  /* position: relative; */
-  width: 750px;
-  height: 60px;
-  background: transparent;
-  border: 2px solid rgba(43, 22, 124, 0.885);
-}
-
-.form .form-box {
-  /* position: absolute; */
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(43, 22, 124, 0.885);
-  margin-bottom: 2rem;
-}
-
-/* section 2 */
-
-.form-box2 {
-  /* background:rgb(6, 49, 89); */
-  background: rgba(43, 22, 124, 0.885);
-  width: 750px;
-  height: 450px;
-  padding: 80px 30px;
-  margin-left: 380px;
-  margin-top: 250px;
-  /* position: absolute; */
-  transform: translate(-50%, -50%);
-  top: 250%;
-  left: 75%;
-  border-radius: 8px;
-  box-shadow: 0 20px 25px rgba(0, 0, 0, 0.25);
-}
-
-.form-box2 * {
-  font-size: 16px;
-  font-family: "Poppins", sans-serif;
-}
-
-.form-box2 .textarea {
-  display: block;
-  width: 100%;
-  height: 60%;
-  resize: none;
-  padding: 20px;
-  color: rgba(43, 22, 124, 0.885);
-  border: 1.5px solid rgba(43, 22, 124, 0.885);
-  border-radius: 5px;
-  outline: none;
-}
-
-.btnSection2 {
-  font-size: 2rem;
-  margin-top: 2rem;
-  color: rgba(43, 22, 124, 0.885);
-  cursor: pointer;
-}
-.section-title .section-header {
-  margin-bottom: 2rem;
-}
-
-/* Section3 */
-
-.result1 {
-  margin-top: 2rem;
-}
-
-.countResult {
-  margin-left: 2rem;
-  font-size: 2rem;
-}
-
-.countNumber {
-  font-size: 2rem;
-}
-
-.form-box2 .numOfLettersInput {
-  color: rgba(43, 22, 124, 0.885);
-  margin-top: 2rem;
-  font-size: 2rem;
-}
-
-.form-box2 .btnSection3 {
-  font-size: 2rem;
-  font-weight: 400;
-  margin-top: 2rem;
-  color: rgba(43, 22, 124, 0.885);
-}
-
-/* Section 4 */
-.form-box3 {
-  /* background:rgb(6, 49, 89); */
-  background: rgba(43, 22, 124, 0.885);
-  width: 750px;
-  height: 450px;
-  padding: 80px 30px;
-  margin-left: 380px;
-  margin-top: 250px;
-  /* position: absolute; */
-  transform: translate(-50%, -50%);
-  top: 250%;
-  left: 75%;
-  border-radius: 8px;
-  box-shadow: 0 20px 25px rgba(0, 0, 0, 0.25);
-}
-
-.form-box3 * {
-  font-size: 16px;
-  font-family: "Poppins", sans-serif;
-}
-.form-box3 .textArea {
-  display: block;
-  width: 100%;
-  height: 60%;
-  resize: none;
-  padding: 20px;
-  color: rgba(43, 22, 124, 0.885);
-  border: 1.5px solid rgba(43, 22, 124, 0.885);
-  border-radius: 5px;
-  outline: none;
-}
-
-.btnSection3 {
-  font-size: 2rem;
-  margin-top: 2rem;
-  color: rgba(43, 22, 124, 0.885);
-  cursor: pointer;
-}
-
-.result3 {
-  margin-top: 2rem;
-}
-
-.countOfResult {
-  margin-left: 2rem;
-  font-size: 2rem;
-}
-
-.countOfNumber {
-  font-size: 2rem;
-}
-
-.form-box3 .limitOfLetters {
-  color: rgba(43, 22, 124, 0.885);
-  margin-top: 2rem;
-  font-size: 2rem;
-}
-
-.form-box3 .btnSection4 {
-  font-size: 2rem;
-  font-weight: 400;
-  margin-top: 2rem;
-  color: rgba(43, 22, 124, 0.885);
-}
-
-/* SIGNUP */
-.section--sign-up {
-  background-color: rgba(43, 22, 124, 0.885);
-  border-top: none;
-  border-bottom: 1px solid #fff;
-  text-align: center;
-  padding: 10rem 3rem;
-}
-
-.section--sign-up .section__header {
-  color: #fff;
-  text-align: center;
-  font-size: 4rem;
-}
-
-.section--sign-up .section__title {
-  margin-bottom: 6rem;
-}
-
-.section--sign-up .btn {
-  font-size: 1.9rem;
-  padding: 2rem 5rem;
-  margin-left: 2rem;
-  background-color: rgb(86, 21, 98);
-  color: #fff;
-  border-radius: 3rem 3rem;
-}
-
-/* FOOTER */
-.footer {
-  padding: 10rem 3rem;
-  background-color: rgb(86, 21, 98);
-}
-
-.footer__nav {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 5rem;
-}
-
-.footer__item {
-  margin-right: 4rem;
-}
-
-.footer__link {
-  font-size: 1.6rem;
-  color: #eee;
-  text-decoration: none;
-}
-
-.footer__logo {
-  height: 5rem;
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 5rem;
-}
-
-.footer__copyright {
-  font-size: 1.4rem;
-  color: #aaa;
-  text-align: center;
-}
-
-.footer__copyright .footer__link {
-  font-size: 1.4rem;
-}
-
-/* MODAL WINDOW */
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 60rem;
-  background-color: #f3f3f3;
-  padding: 5rem 6rem;
-  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
-  z-index: 1000;
-  transition: all 0.5s;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(4px);
-  z-index: 100;
-  transition: all 0.5s;
-}
-
-.modal__header {
-  font-size: 3.25rem;
-  margin-bottom: 4.5rem;
-  line-height: 1.5;
-}
-
-.modal__form {
-  margin: 0 3rem;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  align-items: center;
-  gap: 2.5rem;
-}
-
-.modal__form label {
-  font-size: 1.7rem;
-  font-weight: 500;
-}
-
-.modal__form input {
-  font-size: 1.7rem;
-  padding: 1rem 1.5rem;
-  border: 1px solid #ddd;
-  border-radius: 0.5rem;
-}
-
-.modal__form button {
-  grid-column: 1 / span 2;
-  justify-self: center;
-  margin-top: 1rem;
-  margin-left: 1rem;
-  padding: 1rem 3rem;
-  border-radius: 2.5rem;
-}
-
-.btn--close-modal {
-  font-family: inherit;
-  color: inherit;
-  position: absolute;
-  top: 0.5rem;
-  right: 2rem;
-  font-size: 4rem;
+  margin-top: -12rem;
   cursor: pointer;
   border: none;
-  background: none;
 }
 
-.hidden {
-  visibility: hidden;
-  opacity: 0;
-}
-
-/* COOKIE MESSAGE */
-.cookie-message {
+.nav {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  gap: 60rem;
+  margin: 2rem;
+  margin-bottom: 4rem;
+}
+
+.formBox {
+  background: rgba(43, 22, 124, 0.885);
+  width: 750px;
+  height: 350px;
+  padding: 80px 30px;
+  margin-left: 860px;
+  margin-top: 15rem;
+  transform: translate(-50%, -50%);
+  top: 250%;
+  left: 75%;
+  border-radius: 8px;
+  box-shadow: 0 20px 25px rgba(0, 0, 0, 0.25);
+}
+
+.formBox * {
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+}
+
+.formBox .textArea {
+  display: block;
   width: 100%;
-  background-color: white;
-  color: #bbb;
-  font-size: 1.5rem;
-  font-weight: 400;
+  height: 100%;
+  resize: none;
+  padding: 20px;
+  color: rgba(43, 22, 124, 0.885);
+  border: 1.5px solid rgba(43, 22, 124, 0.885);
+  border-radius: 5px;
+  outline: none;
 }
 
-h1,
-h2,
-p {
-  font-family: sans-serif;
+.formBox .formBoxHeader {
+  font-size: 4rem;
+  margin-top: -8rem;
 }
 
-h1 {
-  color: purple;
-  font-weight: bold;
-  font-style: italic;
-  text-transform: uppercase;
+.wordCounterButtons {
+  display: flex;
+  align-items: center;
+  margin-top: -10rem;
+  gap: 6rem;
 }
 
-h2 {
-  color: purple;
-  font-style: italic;
+.counterBtn {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  padding: 0.5rem 2.8rem;
 }
-/* .author
-{
-  color:purple;
-  } */
+
+.counterBtn .btnSection1 {
+  font-size: 2rem;
+  color: #fff;
+  background-color: rgba(43, 22, 124, 0.885);
+  padding: 1rem 4rem;
+  margin: 2rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.counterBtn .btnSection2 {
+  font-size: 2rem;
+  color: #fff;
+  background-color: rgba(43, 22, 124, 0.885);
+  padding: 1rem 4rem;
+  margin: 2rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.counterBtn .btnSection3 {
+  font-size: 2rem;
+  color: #fff;
+  background-color: rgba(43, 22, 124, 0.885);
+  padding: 1rem 2rem;
+  margin: 2rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.counterBtn .btnSection4 {
+  font-size: 2rem;
+  color: #fff;
+  background-color: rgba(43, 22, 124, 0.885);
+  padding: 1rem 2rem;
+  margin: 2rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.textLimit {
+  margin-top: 0.5rem;
+}
+
+.resetBtn {
+  font-size: 2rem;
+  color: rgba(43, 22, 124, 0.885);
+  padding: 0.5rem 3rem;
+  border: none;
+  margin-top: 0.5rem;
+  margin-left: 0rem;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.btn:hover {
+  background-color: rgba(43, 22, 124, 0.885);
+  color: #fff;
+  border: none;
+}
+
+.btnSection1:hover {
+  background-color: #fff;
+  color: rgba(43, 22, 124, 0.885);
+  border: none;
+}
+
+.btnSection2:hover {
+  background-color: #fff;
+  color: rgba(43, 22, 124, 0.885);
+  border: none;
+}
+
+.btnSection3:hover {
+  background-color: #fff;
+  color: rgba(43, 22, 124, 0.885);
+  border: none;
+}
+
+.btnSection4:hover {
+  background-color: #fff;
+  color: rgba(43, 22, 124, 0.885);
+  border: none;
+}
